--- a/tasks/mysql-configure.yml
+++ b/tasks/mysql-configure.yml
@@ -11,7 +11,6 @@
   ansible.builtin.stat: path=/root/.mysql_misp_imported
   register: mispdbloaded
 
-## trusty: mysql 5.5, centos7: mariadb 5.5
 - name: pre-mysql5.6 | force MyISAM mysql engine to support FULLTEXT indexes
   ansible.builtin.replace:
     dest: "{{ misp_rootdir }}/INSTALL/MYSQL.sql"
@@ -19,7 +18,7 @@
     replace: "ENGINE=MyISAM"
     mode: '0644'
     backup: yes
-  when: ansible_distribution_release == 'trusty' or ansible_distribution_major_version == '7'
+  when: ansible_distribution_major_version == '7'
 
 - name: importing mysql misp db template
   mysql_db:
